<resources>
  <string name="app_name">OpenWnn Korean Keyboard</string>
  <string name="ime_name">OpenWnn Korean</string>
    <string name="preference_ime_setting_app">Keyboard Settings</string>
    <string name="preference_method_setting_menu">Input Method</string>
  <string name="preference_method_enabler_title">Open Input Methods Window</string>
    <string name="preference_method_enabler_summary">Please activate \'OpenWnn Korean\'.</string>
    <string name="preference_method_picker_title">Show Input Method Picker</string>
    <string name="preference_appearance_setting_menu">Keyboard Appearance</string>
    <string name="preference_key_sound_title"> Sound on Key Press </string>
    <string name="preference_key_sound_summary"> Enable key click sound. </string>
    <string name="preference_key_vibration_title"> Vibrate on Key Press </string>
    <string name="preference_key_vibration_summary"> Enable key click vibration. </string>
  <string name="preference_key_vibration_duration_title">Key Vibration Duration</string>
    <string name="preference_key_vibration_duration_summary">Set key vibration duration. Default value is 30.</string>
  <string name="preference_preview_title"> Key Preview </string>
    <string name="preference_preview_summary"> Enable key preview. </string>
    <string name="preference_key_height_portrait_title">Key Height (Portrait)</string>
    <string name="preference_key_height_portrait_summary">Adjust key height in portrait mode. Default value is 50.</string>
  <string name="preference_key_height_landscape_title">Key Height (Landscape)</string>
    <string name="preference_key_height_landscape_summary">Adjust key height in landscape mode. Default value is 42.</string>
  <string name="preference_keyboard_margin_left_title">Keyboard Margin (Left)</string>
  <string name="preference_keyboard_margin_left_summary">Adjust keyboard margin of left side. Default value is 0.</string>
  <string name="preference_keyboard_margin_right_title">Keyboard Margin (Right)</string>
  <string name="preference_keyboard_margin_right_summary">Adjust keyboard margin of right side. Default value is 0.</string>
  <string name="preference_keyboard_margin_bottom_title">Keyboard Margin (Bottom)</string>
  <string name="preference_keyboard_margin_bottom_summary">Adjust keyboard margin of bottom side. Default value is 0.</string>
  <string name="preference_auto_caps_title"> Auto Capitalization </string>
    <string name="preference_auto_caps_summary"> Automatically capitalize the 1st char of a sentence in alphabet mode. </string>
    <string name="preference_keyboard_skin_title">Keyboard Theme</string>
    <string name="preference_keyboard_skin_summary">Change keyboard theme.</string>
    <string name="preference_keyboard_android_default">Standard</string>
  <string name="preference_keyboard_white">White</string>
    <string name="preference_keyboard_dark">Dark</string>
  <string name="preference_keyboard_flat_dark">Flat Dark</string>
  <string name="preference_keyboard_flat_light">Flat Light</string>
    <string name="preference_keyboard_flat_blue">Flat Blue</string>
    <string name="preference_conversion_menu">Conversion</string>
    <string name="preference_prediction_title">Word Prediction</string>
    <string name="preference_prediction_summary">Display predicted words as conversion candidates.</string>
    <string name="preference_correct_spell_title">Typing Error Correction</string>
    <string name="preference_correct_spell_summary">Display predicted words for correcting typing error.</string>
    <string name="preference_input_learning_title">Input Word Learning</string>
    <string name="preference_input_learning_summary">Learn input words.</string>
    <string name="preference_aboutime_menu"> About IME </string>
    <string name="preference_dictionary_menu"> Dictionary </string>
    <string name="preference_dictionary_menu_ja"> Japanese User Dictionary </string>
    <string name="preference_dictionary_menu_en"> English User Dictionary </string>
    <string name="preference_dictionary_menu_zhcn"> Chinese User Dictionary </string>
    <string name="preference_user_dictionary">User Dictionary</string>
    <string name="preference_user_dictionary_edit_words_title">User Dictionary</string>
    <string name="preference_user_dictionary_edit_words_summary">List/add/edit/delete words in user dictionary.</string>
    <string name="preference_user_dictionary_edit_words_summary_ja">List/add/edit/delete words in Japanese user dictionary.</string>
    <string name="preference_user_dictionary_edit_words_summary_en">List/add/edit/delete words in English user dictionary.</string>
    <string name="preference_user_dictionary_edit_words_summary_zhcn">List/add/edit/delete words in Chinese user dictionary.</string>
    <string name="openwnn_korean_copyright">" hgl1002@naver.com"</string>
    <string name="openwnn_korean">"OpenWnn Korean "</string>
    <string name="preference_keyboard_long_press_timeout_title">Long-press timeout (ms)</string>
    <string name="preference_keyboard_long_press_timeout_summary">Set the timeout of long-press.</string>
  <string name="preference_key_setting_menu">Software Keyboard</string>
  <string name="preference_keyboard_use_12key_title">Use 12-Key layout</string>
    <string name="preference_keyboard_use_12key_summary">Use 12-Key based keyboard layout instead of QWERTY-based one.</string>
    <string name="preference_keyboard_hangul_12key_title">12-Key Hangul keyboard type</string>
    <string name="preference_keyboard_hangul_12key_summary">Type of 12-key Hangul keyboard.</string>
    <string name="preference_keyboard_hangul_title">Hangul keyboard type</string>
    <string name="preference_keyboard_hangul_summary">Type of Hangul keyboard.</string>
    <string name="preference_keyboard_alphabet_use_qwerty_title">Always use Qwerty-based layout for Alphabet</string>
    <string name="preference_keyboard_alphabet_use_qwerty_summary">Use qwerty based Alphabet layout while using 12-key as Hangul.</string>
    <string name="preference_keyboard_alphabet_title">Alphabet keyboard type</string>
    <string name="preference_keyboard_alphabet_summary">Type of Alphabet keyboard.</string>
    <string name="preference_keyboard_use_flick_title">Use Flick</string>
    <string name="preference_keyboard_use_flick_summary">Use flick (slide) function for keyboard.</string>
    <string name="preference_keyboard_flick_sensitivity_title">Flick Sensitivity</string>
    <string name="preference_keyboard_flick_sensitivity_summary">Adjust flick sensitivity. Default value is 100.</string>
    <string name="preference_keyboard_timeout_delay_title">Timeout Delay</string>
    <string name="preference_keyboard_timeout_delay_summary">Adjust auto composition end timer. Value 0 disables the timer.</string>
    <string name="preference_keyboard_use_moachigi_title">Use Moajugi</string>
    <string name="preference_keyboard_use_moachigi_summary">Use moajugi. (Fix jamo order automatically when using sebeol layouts)</string>
    <string name="preference_keyboard_quick_period_title">Quick Period Input</string>
    <string name="preference_keyboard_quick_period_summary">Double-press spacebar to input period.</string>
    <string name="preference_keyboard_space_reset_composing_title">Space to reset composing</string>
    <string name="preference_keyboard_space_reset_composing_summary">Use space key to reset composing character on Dubeol Danmoeum layout, etc.</string>
    <string name="preference_hardware_setting_menu">Hardware Keyboard</string>
  <string name="preference_hardware_hangul_title">Hardware Hangul keyboard type</string>
    <string name="preference_hardware_hangul_summary">Type of Hangul keyboard while using hardware keyboard.</string>
  <string name="preference_hardware_alphabet_title">Hardware Alphabet keyboard type</string>
    <string name="preference_hardware_alphabet_summary">Type of Alphabet keyboard while using hardware keyboard.</string>
  <string name="preference_hardware_use_subview_title">Show Sub View</string>
    <string name="preference_hardware_use_subview_summary">Show sub view when using hardware keyboard.</string>
    <string name="preference_hardware_use_numkeyboard_title">Show Num Keyboard</string>
    <string name="preference_hardware_use_numkeyboard_summary">Show Number Keyboard when using hardware keyboard.</string>
    <string name="preference_hardware_use_moachigi_title">Use Moajugi</string>
    <string name="preference_hardware_use_moachigi_summary">Use moajugi when using hardware keyboard.</string>
  <string name="preference_hardware_full_moachigi_title">Full Moachigi</string>
  <string name="preference_hardware_full_moachigi_summary">Use Full Moachigi (Moachigi at once) if available.</string>
  <string name="preference_hardware_full_moachigi_delay_title">Full Moachigi Timeout</string>
  <string name="preference_hardware_full_moachigi_delay_summary">Set the timeout (ms) for Full Moachigi. Default value is 100.</string>
    <string name="preference_hardware_alt_direct_title">Alt Direct input</string>
    <string name="preference_hardware_alt_direct_summary">Always input literal chars on hard Alt combination.</string>
    <string name="preference_conversion_setting_menu">Conversion &amp; Prediction</string>
    <string name="preference_conversion_show_candidates_title">Show candidates window</string>
    <string name="preference_conversion_show_candidates_summary">Show candidates window to use conversion and prediction features.</string>
    <string name="preference_conversion_use_word_completion_title">Word completion</string>
    <string name="preference_conversion_use_word_completion_summary">Use automatic word completion.</string>
    <string name="preference_conversion_use_hanja_title">Hanja conversion</string>
    <string name="preference_conversion_use_hanja_summary">Use Hangeul to Hanja (Chinese characters) conversion.</string>
    <string name="preference_conversion_use_autotext_title">Autotext conversion</string>
    <string name="preference_conversion_use_autotext_summary">Use Autotext conversion.</string>
    <string name="preference_conversion_autotext_edit_title">Edit Autotexts</string>
    <string name="preference_system_setting_menu">System Settings</string>
    <string name="preference_system_use_standard_jamo_title">Use standard Hangul jamo</string>
    <string name="preference_system_use_standard_jamo_summary">Use First-Mid-End Hangul code with standard hangul jamo when required.</string>
    <string name="preference_system_lang_key_press_title">Action on Language Key Press</string>
    <string name="preference_system_lang_key_press_summary">Choose action to perform on language key press.</string>
    <string name="preference_system_lang_key_long_press_title">Action on Language Key Long-Press</string>
    <string name="preference_system_lang_key_long_press_summary">Choose action on language key long-press.</string>
  <string name="preference_dev_menu">Developer Settings</string>
  <string name="preference_dev_softkeyboard">Soft Keyboard</string>
  <string name="preference_dev_use_hangul_soft">Use Hangul Soft</string>
  <string name="preference_dev_hangul_soft_title">Hangul Soft Layout</string>
  <string name="preference_dev_hardkeyboard">Hard Keyboard</string>
  <string name="preference_dev_use_hangul_hard">Use Hangul Hard</string>
  <string name="preference_dev_hangul_hard_title">Hangul Hard Layout</string>
  <string name="openwnn_korean_r">OpenWnn Korean (ver. 2004 and later)</string>
  <string name="openwnn_korean_r_copyright">devrivmt@gmail.com</string>
  <string name="preference_about_license">License</string>
    <string name="openwnn_korean_license" translatable="false">Apache License 2.0</string>
  <string name="preference_about_source_code">Source Code</string>
  <string name="openwnn_korean_source_code" translatable="false"><a href="">https://github.com/RivMt/Openwnn-korean-custom</a></string>
</resources>