<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
			android:key="openwnn_pref_ko">

	<PreferenceCategory android:title="@string/preference_key_setting_menu">
		<CheckBoxPreference android:key="keyboard_hangul_use_12key"
			android:title="@string/preference_keyboard_use_12key_title"
			android:summary="@string/preference_keyboard_use_12key_summary" />
		<me.blog.hgl1002.openwnn.KOKR.KeyboardListPreferenceKOKR
			android:key="keyboard_hangul_12key_layout"
			android:title="@string/preference_keyboard_hangul_12key_title"
			android:summary="@string/preference_keyboard_hangul_12key_summary"
			android:entries="@array/keyboard_12key_layout"
			android:entryValues="@array/keyboard_12key_layout_id"
			android:defaultValue="keyboard_12key_sebul_munhwa" />
		<me.blog.hgl1002.openwnn.KOKR.KeyboardListPreferenceKOKR
			android:key="keyboard_hangul_layout"
			android:title="@string/preference_keyboard_hangul_title"
			android:summary="@string/preference_keyboard_hangul_summary"
			android:entries="@array/keyboard_hangul_layout"
			android:entryValues="@array/keyboard_hangul_layout_id"
			android:defaultValue="keyboard_sebul_391" />
		<CheckBoxPreference android:key="keyboard_alphabet_use_qwerty"
			android:title="@string/preference_keyboard_alphabet_use_qwerty_title"
			android:summary="@string/preference_keyboard_alphabet_use_qwerty_summary" />
		<me.blog.hgl1002.openwnn.KOKR.KeyboardListPreferenceKOKR
			android:key="keyboard_alphabet_layout"
			android:title="@string/preference_keyboard_alphabet_title"
			android:summary="@string/preference_keyboard_alphabet_summary"
			android:entries="@array/keyboard_alphabet_layout"
			android:entryValues="@array/keyboard_alphabet_layout_id"
			android:defaultValue="keyboard_alphabet_qwerty" />
		<CheckBoxPreference android:key="keyboard_use_flick"
			android:title="@string/preference_keyboard_use_flick_title"
			android:summary="@string/preference_keyboard_use_flick_summary"
			android:defaultValue="true" />
		<me.blog.hgl1002.openwnn.KOKR.IntEditTextPreference
			android:key="keyboard_flick_sensitivity"
			android:title="@string/preference_keyboard_flick_sensitivity_title"
			android:summary="@string/preference_keyboard_flick_sensitivity_summary"
			android:defaultValue="100" />
		<me.blog.hgl1002.openwnn.KOKR.IntEditTextPreference
			android:key="keyboard_timeout_delay"
			android:title="@string/preference_keyboard_timeout_delay_title"
			android:summary="@string/preference_keyboard_timeout_delay_summary"
			android:defaultValue="500" />
		<CheckBoxPreference android:key="keyboard_use_moachigi"
			android:title="@string/preference_keyboard_use_moachigi_title"
			android:summary="@string/preference_keyboard_use_moachigi_summary"
			android:defaultValue="true" />
		<CheckBoxPreference android:key="keyboard_quick_period"
			android:title="@string/preference_keyboard_quick_period_title"
			android:summary="@string/preference_keyboard_quick_period_summary"
			android:defaultValue="false" />
		<CheckBoxPreference android:key="keyboard_space_reset_composing"
			android:title="@string/preference_keyboard_space_reset_composing_title"
			android:summary="@string/preference_keyboard_space_reset_composing_summary"
			android:defaultValue="false" />
	</PreferenceCategory>

</PreferenceScreen>
