<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
			android:key="openwnn_pref_ko">

	<PreferenceCategory android:title="@string/preference_appearance_setting_menu">
		<CheckBoxPreference android:key="key_sound"
			android:title="@string/preference_key_sound_title"
			android:summary="@string/preference_key_sound_summary"/>
		<CheckBoxPreference android:key="key_vibration"
			android:title="@string/preference_key_vibration_title"
			android:summary="@string/preference_key_vibration_summary"/>
		<me.blog.hgl1002.openwnn.KOKR.IntEditTextPreference
			android:key="key_vibration_duration"
			android:title="@string/preference_key_vibration_duration_title"
			android:summary="@string/preference_key_vibration_duration_summary"
			android:defaultValue="30"/>
		<CheckBoxPreference android:key="popup_preview"
			android:title="@string/preference_preview_title"
			android:summary="@string/preference_preview_summary"
			android:defaultValue="false" />
		<me.blog.hgl1002.openwnn.KOKR.IntEditTextPreference
			android:key="key_height_portrait"
			android:title="@string/preference_key_height_portrait_title"
			android:summary="@string/preference_key_height_portrait_summary"
			android:defaultValue="50"/>
		<me.blog.hgl1002.openwnn.KOKR.IntEditTextPreference
			android:key="key_height_landscape"
			android:title="@string/preference_key_height_landscape_title"
			android:summary="@string/preference_key_height_landscape_summary"
			android:defaultValue="42"/>
		<me.blog.hgl1002.openwnn.KOKR.IntEditTextPreference
			android:key="keyboard_long_press_timeout"
			android:title="@string/preference_keyboard_long_press_timeout_title"
			android:summary="@string/preference_keyboard_long_press_timeout_summary"
			android:defaultValue="500" />
		<me.blog.hgl1002.openwnn.KOKR.KeyboardListPreferenceKOKR
			android:key="keyboard_skin"
			android:title="@string/preference_keyboard_skin_title"
			android:summary="@string/preference_keyboard_skin_summary"
			android:entries="@array/keyboard_skin"
			android:entryValues="@array/keyboard_skin_id"
			android:defaultValue="keyboard_android_default" />
	</PreferenceCategory>

</PreferenceScreen>
