<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
			android:key="openwnn_pref_ko">

	<PreferenceCategory android:title="@string/preference_aboutime_menu">
		<io.rivmt.keyboard.openwnn.KOKR.preference.RevealHiddenPreference
			android:key="reveal_dev_settings"
			android:title="@string/openwnn_korean_r"
			android:summary="@string/openwnn_korean_r_copyright" />
		<io.rivmt.keyboard.openwnn.KOKR.preference.RevealHiddenPreference
            android:key="reveal_dev_settings"
			android:title="@string/openwnn_korean"
			android:summary="@string/openwnn_korean_copyright" />
		<Preference
			android:key="pref_license"
			android:title="@string/preference_about_license"
			android:summary="@string/openwnn_korean_license"
			/>
		<Preference
			android:key="pref_source_code"
			android:title="@string/preference_about_source_code"
			android:summary="@string/openwnn_korean_source_code"
			/>
	</PreferenceCategory>

</PreferenceScreen>
