<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
			android:key="openwnn_pref_ko">
	
	<PreferenceCategory android:title="@string/preference_conversion_setting_menu">
        <CheckBoxPreference android:key="conversion_show_candidates"
            android:title="@string/preference_conversion_show_candidates_title"
            android:summary="@string/preference_conversion_show_candidates_summary"
            android:defaultValue="false" />
		<CheckBoxPreference android:key="conversion_use_word_completion"
			android:title="@string/preference_conversion_use_word_completion_title"
			android:summary="@string/preference_conversion_use_word_completion_summary"
			android:defaultValue="false" />
		<CheckBoxPreference android:key="conversion_use_hanja"
			android:title="@string/preference_conversion_use_hanja_title"
			android:summary="@string/preference_conversion_use_hanja_summary"
			android:defaultValue="false" />
        <CheckBoxPreference android:key="conversion_use_autotext"
            android:title="@string/preference_conversion_use_autotext_title"
            android:summary="@string/preference_conversion_use_autotext_summary"
            android:defaultValue="false" />
        <io.rivmt.keyboard.openwnn.KOKR.preference.EditAutotextPreference
            android:key="autotexts"
            android:title="@string/preference_conversion_autotext_edit_title" />

	</PreferenceCategory>

</PreferenceScreen>
