<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
			android:key="openwnn_pref_ko">
	<PreferenceCategory android:title="@string/preference_system_setting_menu">
		<CheckBoxPreference android:key="system_use_standard_jamo"
			android:title="@string/preference_system_use_standard_jamo_title"
			android:summary="@string/preference_system_use_standard_jamo_summary"
			android:defaultValue="false" />
		<ListPreference android:key="system_action_on_lang_key_press"
			android:title="@string/preference_system_lang_key_press_title"
			android:summary="@string/preference_system_lang_key_press_summary"
			android:entries="@array/lang_key_actions"
			android:entryValues="@array/lang_key_actions_id"
			android:defaultValue="switch_kor_eng" />
		<ListPreference android:key="system_action_on_lang_key_long_press"
			android:title="@string/preference_system_lang_key_long_press_title"
			android:summary="@string/preference_system_lang_key_long_press_summary"
			android:entries="@array/lang_key_actions"
			android:entryValues="@array/lang_key_actions_id"
			android:defaultValue="list_methods" />
	</PreferenceCategory>

</PreferenceScreen>
