<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
	<header
		android:fragment="io.rivmt.keyboard.openwnn.OpenWnnControlPanelKOKR$InputMethodFragment"
		android:title="@string/preference_method_setting_menu" />
	<header
		android:fragment="io.rivmt.keyboard.openwnn.OpenWnnControlPanelKOKR$KeyboardAppearanceFragment"
		android:title="@string/preference_appearance_setting_menu" />
	<header
		android:fragment="io.rivmt.keyboard.openwnn.OpenWnnControlPanelKOKR$SoftKeyboardFragment"
		android:title="@string/preference_key_setting_menu" />
	<header
		android:fragment="io.rivmt.keyboard.openwnn.OpenWnnControlPanelKOKR$HardKeyboardFragment"
		android:title="@string/preference_hardware_setting_menu" />
	<header
		android:fragment="io.rivmt.keyboard.openwnn.OpenWnnControlPanelKOKR$SystemFragment"
		android:title="@string/preference_system_setting_menu" />
	<header
		android:fragment="io.rivmt.keyboard.openwnn.OpenWnnControlPanelKOKR$AboutFragment"
		android:title="@string/preference_aboutime_menu" />
	<header
		android:fragment="io.rivmt.keyboard.openwnn.OpenWnnControlPanelKOKR$DeveloperFragment"
		android:title="@string/preference_dev_menu" />

</preference-headers>